fix title size on mobile

--- a/overrides/assets/stylesheets/custom.css
+++ b/overrides/assets/stylesheets/custom.css
@@ -52,7 +52,7 @@ background:
     font-size: 1.35rem;
   }
   .md-header__title {
-    font-size: 0.25rem;
+    font-size: 0.64rem;
   }
 }
 
